kubernetes/apps/network/kgateway/gateway/ai.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ai
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname gateway.goyangi.io
spec:
  gatewayClassName: agentgateway-v2
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 192.168.69.130,fd5d:a293:f321:69::130
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: goyangi-io-tls
