kubernetes/apps/network/kgateway/gateway/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ai-gateway
spec:
  hostnames:
    - gateway.goyangi.io
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: ai
          group: gateway.networking.k8s.io
          kind: Gateway
